fix --path bug with no fallback
