# internal/stoker/api.go
@@ -34,7 +34,7 @@ type APIHandlerOpt interface {
 }
 
 func (o *APIHandlerOpts) Apply(opts *APIHandlerOpts) {
-	if o.Fallback != nil {
+	if o != nil {
 		if opts != nil {
 			if o.Path != "" {
 				opts.Path = path.Join("/", o.Path)
@@ -323,18 +323,16 @@ const (
 	branchParam = "branch"
 )
 
-//	@Summary	Get the details for a specific Steamapp ID
-//	@Produce	json
-//	@Param		appID	path		int		true	"Steamapp ID"
-//	@Param		branch	path		string	false	"Steamapp branch (default public)"
-//	@Success	200		{object}	Steamapp
-//	@Failure	400		{object}	Error
-//	@Failure	415		{object}	Error
-//	@Failure	500		{object}	Error
-//	@Router		/steamapps/{appID} [get]
-//	@Router		/steamapps/{appID}/{branch} [get]
-//
-
+// @Summary	Get the details for a specific Steamapp ID
+// @Produce	json
+// @Param		appID	path		int		true	"Steamapp ID"
+// @Param		branch	path		string	false	"Steamapp branch (default public)"
+// @Success	200		{object}	Steamapp
+// @Failure	400		{object}	Error
+// @Failure	415		{object}	Error
+// @Failure	500		{object}	Error
+// @Router		/steamapps/{appID} [get]
+// @Router		/steamapps/{appID}/{branch} [get]
 func (h *handler) getSteamapp(w http.ResponseWriter, r *http.Request) error {
 	var (
 		steamappID = chi.URLParam(r, appIDParam)
@@ -357,15 +355,13 @@ func (h *handler) getSteamapp(w http.ResponseWriter, r *http.Request) error {
 	return respondJSON(w, r, steamapp)
 }
 
-//	@Summary	List known Steamapps
-//	@Produce	json
-//	@Param		continue	query		string	false	"Continue token"
-//	@Success	200			{array}		SteamappSummary
-//	@Failure	415			{object}	Error
-//	@Failure	500			{object}	Error
-//	@Router		/steamapps [get]
-//
-
+// @Summary	List known Steamapps
+// @Produce	json
+// @Param		continue	query		string	false	"Continue token"
+// @Success	200			{array}		SteamappSummary
+// @Failure	415			{object}	Error
+// @Failure	500			{object}	Error
+// @Router		/steamapps [get]
 func (h *handler) getSteamapps(w http.ResponseWriter, r *http.Request) error {
 	var (
 		_        = logr.FromContextOrDiscard(r.Context())
@@ -414,23 +410,21 @@ type SteamappSummary struct {
 	Locked  bool      `json:"locked,omitempty"`
 }
 
-//	@Summary	Create or update the details of a specific Steamapp ID
-//	@Accept		application/json
-//	@Produce	json
-//	@Param		appID			path		int				true	"Steamapp ID"
-//	@Param		branch			path		string			false	"Steamapp branch (default public)"
-//	@Param		betapassword	query		string			false	"Steamapp branch password"
-//	@Param		request			body		SteamappDetail	true	"Steamapp detail"
-//	@Success	200				{object}	Steamapp
-//	@Failure	400				{object}	Error
-//	@Failure	415				{object}	Error
-//	@Failure	500				{object}	Error
-//	@Router		/steamapps/{appID} [post]
-//	@Router		/steamapps/{appID}/{branch} [post]
-//	@Router		/steamapps/{appID} [put]
-//	@Router		/steamapps/{appID}/{branch} [put]
-//
-
+// @Summary	Create or update the details of a specific Steamapp ID
+// @Accept		application/json
+// @Produce	json
+// @Param		appID			path		int				true	"Steamapp ID"
+// @Param		branch			path		string			false	"Steamapp branch (default public)"
+// @Param		betapassword	query		string			false	"Steamapp branch password"
+// @Param		request			body		SteamappDetail	true	"Steamapp detail"
+// @Success	200				{object}	Steamapp
+// @Failure	400				{object}	Error
+// @Failure	415				{object}	Error
+// @Failure	500				{object}	Error
+// @Router		/steamapps/{appID} [post]
+// @Router		/steamapps/{appID}/{branch} [post]
+// @Router		/steamapps/{appID} [put]
+// @Router		/steamapps/{appID}/{branch} [put]
 func (h *handler) upsertSteamapp(w http.ResponseWriter, r *http.Request) error {
 	var (
 		steamappID = chi.URLParam(r, appIDParam)
